# petthecord

./: .gitignore  LICENSE  README.md  pyproject.toml
src/petthecord/: __init__.py  bot.py  cache.py  defaults.py  main.py  runner.py  server.py
src/petthecord/petter/: __init__.py  cachedpetter.py  exceptions.py  petter.py
